feat: store schedule in a ArrayList